    - Add some examples and references to Icinga 2 configuration and CheckCommands
    - Add chapters similar to known Icinga projects
    - Reformat everything as proper Markdown
  - make session file usage more robust (Sven Nierlein)
    Compare the api returned url and the given url2connect less error prone.
    Using --sslport=443 results in a url2connect https://vcenter:443/... while
    get_option returns https://vcenter/...
    Also it seems like some api returns .../sdk while others return .../sdk/webService
    so just ignore that part.
    Both leads to not resuing the existing session files.
  - added support to query host/datacenter snapshots (Gerhard Lausser)
    - List vm's wich have snapshots older or bigger than a certain threshold
  - reduce API calls in datastore_volumes_info (Danijel Tasov)
    Instead of calling Vim::get_view for each datastore call
    Vim::get_views with all of them at once.
  - lowercase hostnames in connect urls (Danijel Tasov)
    otherwise cookies may not match with LWP
  - Fix logic error (Danijel Tasov)
    $host_state cannot equal to UP and "Maintenance Mode" at the same time
  - increase $unknown on undefined $host_state (Danijel Tasov)
  - warn if no volumes match (Danijel Tasov)
  - fix bad OUM in vm_disk_io_info (6uellerBpanda)
  - A unpluged network interface is considered critical (Ricardo Bartels)
  - Be more consistent in return level of maintenance mode (Ricardo Bartels)
    only write warning if host runtime is checked with no subselect
  - Added option "--ignore_health" to host runtime (all) check
    Sometimes not all hardware components are correctly reported via
    CIM interface which leads to check errors when checking runtime
    status all. This option ignores the health status and prevents the
    the plugin from failing to report the overall status of the host.
    IMPORTENT: make sure to monitor the host health status separately!
    Most likely via ILO/ILOM interface.